public class Book {
    int BookID;
    String Name, Author;
}
